--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "optional-default-google-maps",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "package": "svelte-kit package"
-  },
-  "devDependencies": {
-    "@googlemaps/js-api-loader": "^1.12.9",
-    "@googlemaps/markerclustererplus": "^1.2.8",
-    "@sveltejs/kit": "next",
-    "@types/google.maps": "^3.46.1",
-    "svelte": "^3.42.6",
-    "svelte-check": "^2.2.6",
-    "svelte-language-server": "^0.14.13",
-    "svelte-preprocess": "^4.9.4",
-    "svelte2tsx": "^0.4.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
-  },
-  "type": "module"
+    "name": "optional-default-google-maps",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "svelte-kit dev",
+        "build": "svelte-kit build",
+        "preview": "svelte-kit preview",
+        "check": "svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+        "lint": "prettier --check .",
+        "format": "prettier --write .",
+        "publish": "pnpm run lint && pnpm run package && pnpm publish ./package"
+    },
+    "devDependencies": {
+        "@googlemaps/js-api-loader": "^1.12.9",
+        "@googlemaps/markerclustererplus": "^1.2.8",
+        "@sveltejs/kit": "next",
+        "@types/google.maps": "^3.46.1",
+        "svelte": "^3.42.6",
+        "svelte-check": "^2.2.6",
+        "svelte-language-server": "^0.14.13",
+        "svelte-preprocess": "^4.9.4",
+        "svelte2tsx": "^0.4.8",
+        "tslib": "^2.3.1",
+        "typescript": "^4.4.4"
+    },
+    "type": "module",
+    "homepage": "https://github.com/tomatrow/optional-default-site-kit#readme",
+    "author": "AJ Caldwell <tomatrow@gmail.com>"
 }
