--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "dev": "svelte-kit dev",
         "build": "svelte-kit build",
         "preview": "svelte-kit preview",
+        "package": "svelte-kit package",
         "check": "svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --check .",
