--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "format": "prettier --write .",
         "publish": "pnpm run lint && pnpm run package && pnpm publish ./package"
     },
-    "devDependencies": {
+    "dependencies": {
         "@googlemaps/js-api-loader": "^1.12.9",
-        "@googlemaps/markerclustererplus": "^1.2.8",
+        "@googlemaps/markerclustererplus": "^1.2.8"
+    },
+    "devDependencies": {
         "@sveltejs/kit": "next",
         "@types/google.maps": "^3.46.1",
         "svelte": "^3.42.6",
