--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     },
     "dependencies": {
         "@googlemaps/js-api-loader": "^1.12.9",
-        "@googlemaps/markerclustererplus": "^1.2.8"
+        "@googlemaps/markerclusterer": "^1.0.15"
     },
     "devDependencies": {
         "@sveltejs/kit": "next",
-        "@types/google.maps": "^3.46.1",
+        "@types/google.maps": "^3.47.0",
         "svelte": "^3.42.6",
         "svelte-check": "^2.2.6",
         "svelte-language-server": "^0.14.13",
         "svelte-preprocess": "^4.9.4",
+        "svelte-typed-context": "^1.0.1",
         "svelte2tsx": "^0.4.8",
         "tslib": "^2.3.1",
         "typescript": "^4.4.4"
