--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     },
     "dependencies": {
         "@googlemaps/js-api-loader": "^1.12.9",
-        "@googlemaps/markerclusterer": "^1.0.15"
+        "@googlemaps/markerclusterer": "^1.0.15",
+        "svelte-typed-context": "^1.0.1"
     },
     "devDependencies": {
         "@sveltejs/kit": "next",
@@ -23,7 +24,6 @@
         "svelte-check": "^2.2.6",
         "svelte-language-server": "^0.14.13",
         "svelte-preprocess": "^4.9.4",
-        "svelte-typed-context": "^1.0.1",
         "svelte2tsx": "^0.4.8",
         "tslib": "^2.3.1",
         "typescript": "^4.4.4"
