--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
         "publish": "pnpm run lint && pnpm run package && pnpm publish ./package"
     },
     "dependencies": {
-        "svelte-typed-context": "^1.0.1"
+        "@googlemaps/js-api-loader": "^1.14.3",
+        "@googlemaps/markerclusterer": "^2.0.7"
     },
     "devDependencies": {
-        "@googlemaps/js-api-loader": "^1.12.11",
-        "@googlemaps/markerclusterer": "^1.0.17",
         "@sveltejs/kit": "next",
-        "@types/google.maps": "^3.47.1",
-        "svelte": "^3.44.2",
-        "svelte-check": "^2.2.10",
-        "svelte-language-server": "^0.14.14",
-        "svelte-preprocess": "^4.9.8",
-        "svelte2tsx": "^0.4.11",
-        "tslib": "^2.3.1",
-        "typescript": "^4.5.3"
+        "@types/google.maps": "^3.49.0",
+        "optional-default-site-kit": "^0.3.3",
+        "svelte": "^3.48.0",
+        "svelte-check": "^2.7.1",
+        "svelte-language-server": "^0.14.27",
+        "svelte-preprocess": "^4.10.6",
+        "svelte2tsx": "^0.5.10",
+        "tslib": "^2.4.0",
+        "typescript": "^4.7.2"
     },
     "type": "module",
     "homepage": "https://github.com/tomatrow/optional-default-google-maps#readme",
