--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-    "name": "optional-default-google-maps",
-    "version": "0.2.0",
-    "scripts": {
-        "dev": "svelte-kit dev",
-        "build": "svelte-kit build",
-        "preview": "svelte-kit preview",
-        "package": "svelte-kit package",
-        "check": "svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-        "lint": "prettier --check .",
-        "format": "prettier --write .",
-        "publish": "pnpm run lint && pnpm run package && pnpm publish ./package"
-    },
-    "dependencies": {
-        "@googlemaps/js-api-loader": "^1.14.3",
-        "@googlemaps/markerclusterer": "^2.0.7"
-    },
-    "devDependencies": {
-        "@sveltejs/kit": "next",
-        "@types/google.maps": "^3.49.0",
-        "optional-default-site-kit": "^0.3.3",
-        "svelte": "^3.48.0",
-        "svelte-check": "^2.7.1",
-        "svelte-language-server": "^0.14.27",
-        "svelte-preprocess": "^4.10.6",
-        "svelte2tsx": "^0.5.10",
-        "tslib": "^2.4.0",
-        "typescript": "^4.7.2"
-    },
-    "type": "module",
-    "homepage": "https://github.com/tomatrow/optional-default-google-maps#readme",
-    "author": "AJ Caldwell <tomatrow@gmail.com>"
+	"name": "optional-default-google-maps",
+	"version": "0.2.0",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "svelte-kit sync && svelte-package",
+		"package": "svelte-package",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check .",
+		"format": "prettier --write .",
+		"publish": "pnpm run lint && pnpm run build && pnpm publish ./package"
+	},
+	"devDependencies": {
+		"@googlemaps/js-api-loader": "^1.14.3",
+		"@googlemaps/markerclusterer": "^2.0.11",
+		"@sveltejs/adapter-auto": "1.0.0-next.75",
+		"@sveltejs/kit": "1.0.0-next.484",
+		"@sveltejs/package": "1.0.0-next.3",
+		"@types/google.maps": "^3.50.1",
+		"optional-default-site-kit": "^0.3.6",
+		"prettier": "^2.7.1",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.50.1",
+		"svelte-check": "^2.9.0",
+		"svelte-language-server": "^0.14.35",
+		"svelte-preprocess": "^4.10.7",
+		"tslib": "^2.4.0",
+		"typescript": "^4.8.3",
+		"vite": "^3.1.2"
+	},
+	"type": "module",
+	"homepage": "https://github.com/tomatrow/optional-default-google-maps#readme",
+	"author": "AJ Caldwell <tomatrow@gmail.com>"
 }
