--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": false,
-    "arrowParens": "avoid",
-    "trailingComma": "none",
-    "printWidth": 100,
-    "pluginSearchDirs": ["."]
+	"tabWidth": 4,
+	"semi": false,
+	"singleQuote": false,
+	"arrowParens": "avoid",
+	"trailingComma": "none",
+	"printWidth": 100,
+	"pluginSearchDirs": ["."],
+	"useTabs": true
 }
